STYLE: Fix buttons container max width because buttons are overflowing

--- a/minimalist-white.css
+++ b/minimalist-white.css
@@ -28,7 +28,7 @@ body {
     width: fit-content;
     height: fit-content;
     border-radius: 8px;
-    max-width: 17.5rem;
+    max-width: 21rem;
     padding: 10px;
     transition: transform 0.6s ease, opacity 0.6s ease;
     transform-origin: center;
@@ -45,10 +45,12 @@ body {
 .history-container {
     border: 2px solid blue;
     height: 6rem;
+    /* max-width: 20rem; */
 }
 
 .dis {
     /* border: 2px solid red; */
+    max-width: 21rem;
 }
 
 .expression-dis {
@@ -100,8 +102,11 @@ body {
 }
 
 .buttons-container {
+    box-sizing: border-box;
     position: relative;  
     background-color: white;
+    /* border: 2px solid red; */
+    max-width: 21rem;
 }
 
 .heart-overlay {
@@ -196,6 +201,7 @@ body {
     /* border: 1px solid green; */
     z-index: 1;
     -webkit-tap-highlight-color: transparent;
+    /* border: 2px solid green; */
 
 }
 
@@ -300,6 +306,8 @@ body {
     overflow-x: hidden;
     scrollbar-width: thin;
     /* border: 1px solid red; */
+    max-width: 21rem;
+
 
 }
 
@@ -308,7 +316,7 @@ body {
 }
 
 .history {
-        /* border: 1px solid red; */
+    /* border: 1px solid red; */
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -319,7 +327,7 @@ body {
     min-height: 1rem;
     font-size: 0.75rem;
     cursor: pointer;
-    /* max-width: 17.5rem; */
+    max-width: 17.5rem;
     min-width: 0; 
     overflow: hidden; 
 }
@@ -378,7 +386,7 @@ body {
     text-align: center;
     font-size: 1.1rem;
     width: 90%;
-    max-width: 20rem;
+    max-width: 21rem;
 }
 
 .sorry-popup img {
